--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/iostreamer-X/qwilr-assigment#readme",
   "dependencies": {
+    "@alpacahq/alpaca-trade-api": "^1.0.3",
     "@nestjs/common": "5.3.7",
     "@nestjs/core": "5.3.7",
     "@nestjs/mongoose": "^6.0.0",
@@ -69,6 +70,7 @@
     "lint-staged": "^8.1.4",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
+    "mongodb": "^3.2.7",
     "mongoose": "^5.5.0",
     "newrelic": "^2.9.1",
     "nodemon": "^1.18.6",
