Added portfolio and balance service

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/camelcase": "4.1.0",
     "@types/csv-stringify": "^1.4.2",
     "@types/joi": "^13.6.3",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash": "^4.14.118",
     "@types/moment-timezone": "^0.5.10",
     "@types/mongoose": "^5.3.25",
@@ -66,6 +67,7 @@
     "hot-shots": "^6.2.0",
     "husky": "^1.2.1",
     "joi": "^13.7.0",
+    "jsonwebtoken": "^8.5.1",
     "jsum": "^0.1.4",
     "less": "^3.8.1",
     "lint-staged": "^8.1.4",
