Added stocks module and login integration

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "child_process": "^1.0.2",
     "class-transformer-fixed": "^0.1.8",
     "class-validator": "^0.9.1",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
     "cssmin": "^0.4.3",
